@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-20T16:15:54Z",
-  "count_outdated" : 402,
-  "uniques_outdated" : 218,
-  "count" : 426,
+  "timestamp" : "2022-07-21T01:05:17Z",
+  "count_outdated" : 404,
+  "uniques_outdated" : 219,
+  "count" : 427,
   "uniques" : 231,
   "clones" : [
-    {
-      "timestamp": "2022-07-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-07T00:00:00Z",
       "count": 2,
